// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Symbols - Bar Snapshot 1`] = `
Array [
  0,
  0,
  0.01,
  0,
  0,
  0.7,
  0.01,
  0.7,
]
`;

exports[`Equation Symbols - Bar Snapshot 2`] = `
Array [
  0.01,
  0,
  0,
  0,
  0.01,
  1,
  0,
  1,
]
`;
